--- a/1111.html
+++ b/1111.html
@@ -68,7 +68,7 @@
                 те, которые выполняются прямо в браузере пользователя.
                 Это скрипты, написанные на языке <b>JavaScript</b>.
                 Они чаще всего используются для, того чтобы сделать страницу
-                более удобной и красивой.
+                более удобной и красивой.1
             </li>
         </ul>
     
