--- a/xzx.html
+++ b/xzx.html
@@ -1,12 +1,193 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>as</title>
-    <link rel="stylesheet" href="xd.css">
-</head>
-<body>
-    <h1 class="xd">Я лучший человек на свете</h1>
-</body>
+<html>
+	<head>
+		<meta charset="utf-8">
+		<title>This is the title</title>
+	</head>
+	<body>
+		This is the main content of the page.
+	</body>
+    <p>
+        unlucky
+    </p>
+    <p>
+        unlucky
+    </p>
+    <p>
+        unlucky
+    </p>
+    <p>
+        unlucky
+    </p>
+    <p>
+        unlucky
+    </p>
+<h1>Heading h1</h1>
+<h2>Heading h2</h2>
+<h3>Heading h3</h3>
+<h4>Heading h4</h4>
+<h5>Heading h5</h5>
+<h6>Heading h6</h6>
+<h1>finesh</h1>
+<h2>fish</h2>
+<p>
+    unlucky
+</p>
+<h2>fish</h2>
+<p>
+    fsdf <i>sddfs</i>
+</p>
+<p>
+    fjgfg <b>bold</b>
+</p>
+<ul>
+    <li>red</li>
+    <li>yellow</li>
+    <li>green</li>
+    <li>blue</li>
+    <li>black</li>
+</ul>
+<ol>
+    <li>Nick</li>
+    <li>John</li>
+    <li>Mary</li>
+    <li>Jane</li>
+    <li>Alex</li>
+</ol>
+<a href="https://code.mu/">code.mu</a>
+<a href="https://ya.ru/?utm_referrer=https%3A%2F%2Fyandex.ru%2F&ysclid=lxlmi1zt5i266524712">yandex</a>
+<a href="https://www.youtube.com/">youtube</a>
+
+
+<img src="./img/leo.jpg" width="300" height="100">
+<img src="./img/leo.jpg" width="300" height="300">
+
+<table border="1" width="400" height="300">
+	<tr>
+		<td>0</td>
+		<td>1</td>
+		<td>2</td>
+        <td>3</td>
+        <td>4</td>
+	</tr>
+	<tr>
+		<td>5</td>
+		<td>6</td>
+		<td>7</td>
+        <td>8</td>
+        <td>9</td>
+	</tr>
+	<tr>
+		<td>a</td>
+		<td>b</td>
+		<td>c</td>
+        <td>d</td>
+        <td>e</td>
+	</tr>
+</table>
+
+<table border="1" width="300">
+	<tr>
+		<th>Product</th>
+		<th>Price</th>
+		<th>Quantity</th>
+	</tr>
+	<tr>
+		<td>Apples</td>
+		<td>100</td>
+		<td>5kg</td>
+	</tr>
+	<tr>
+		<td>Oranges</td>
+		<td>200</td>
+		<td>6kg</td>
+	</tr>
+	<tr>
+		<td>Bananas</td>
+		<td>300</td>
+		<td>7kg</td>
+	</tr>
+</table>
+
+
+<h1>
+    Main page title
+</h1>
+<p>
+    Paragraph with text.
+</p>
+<h1>Secondary heading 1</h1>
+<p>
+    Paragraph with text.
+</p>
+<p>
+    Paragraph with text.
+</p>
+<p>
+    Paragraph with text.
+</p>
+<h1>Secondary heading 2</h1>
+<p>
+    Paragraph with text.
+</p>
+<p>
+    Paragraph with text.
+</p>
+<p>
+    Paragraph with text.
+</p>
+<h1>Secondary heading 3</h1>
+<p>
+    Paragraph with text.
+</p>
+<p>
+    Paragraph with text.
+</p>
+<p>
+    Paragraph with text.
+</p>
+
+<h1>Что такое CMS</h1>
+<p>
+    <b>CMS</b> - "система управления контентом" (<b>движок</b>) - написанная PHP-программистами основа для сайта, с помощью которой вы сможете управлять сайтом (добавлять контент, менять пункты меню и т.п.) не зная HTML и CSS.
+</p>
+<p>
+    Однако, для того чтобы сделать сайт с помощью <b>CMS</b> <i>потребуются услуги</i> и программиста, и дизайнера, и верстальщика. И капиталовложения.
+</p>
+<h1>Какие бывают cms</h1>
+<p>
+    Бывают различные системы управления контентом: для интернет-магазинов, для блогов, для форумов и т.д.
+</p>
+<h1>Примеры cms</h1>
+<p>
+    <i>Примеры популярных CMS</i>: Joomla, WordPress (для блогов), PhpBB (для форумов).
+</p>
+<p>
+    <b>CMS-ки</b> бывают <i>платные</i> и <i>бесплатные</i>.
+</p>
+
+<h1>Что нужно знать, чтобы делать сайты</h1>
+<ol>
+    <li><b>HTML</b></li>
+    <li><i>CSS</i></li>
+    <li>PHP</li>
+    <li>SQL</li>
+    <li>JavaScript</li>
+    <li>jQuery</li>
+    <li>Flash</li>
+    <li>SEO</li>
+</ol>
+
+<h1>PHP и JavaScript</h1>
+<p>
+    Языки программирования <b>PHP</b> и <b>JavaScript</b> позволяют сделать сайт динамичным, то есть реагирующим на действия пользователя. Например, можно сделать красивую выпадающую менюшку или слайдер.
+</p>
+<h1>Виды скриптов</h1>
+<p>
+    Для этого пишутся скрипты (англ. <i>script</i> - "сценарий") - программы, позволяющие реагировать на действия пользователя. Скрипты бывают двух видов: 
+</p>
+<ul>
+    <li>те, которые выполняются на сервере, а результат их выполнения приходит в браузер к пользователю уже в готовом виде. Это скрипты, написанные на языке <b>PHP</b>. На нем пишутся <b>CMS-ки</b> – системы управления контентом.</li>
+    <li>те, которые выполняются прямо в браузере пользователя. Это скрипты, написанные на языке <b>JavaScript</b>. Они чаще всего используются для того, чтобы сделать страницу более удобной и красивой.</li>
+</ul>
 </html>
